feat: 补充全部repo、assembler、文档
