# internal/swaggertype/role.go
@@ -1,0 +1,6 @@
+package swaggertype
+
+import `dpcms/internal/app/dto`
+
+type Role = Result[dto.Role]
+type RoleList = PaginatedResult[dto.Role]
